    all of the template variables used and the configuration variables
    that can be set in /etc/webkdc/webkdc.conf.

 *) Document in detail the page flow for the weblogin script and the
    variables it uses when rendering page templates.

 *) Preliminary port to Heimdal 0.6 (0.7 was previously supported).  This
    has not yet been well-tested.

 *) Change the link for the first WebAuth test to "basic WebAuth" from
    "basic auth" to avoid confusion.

WebAuth 3.4.2 (2006-02-17)

 *) Don't try to build the modules with -z defs.  If it actually works, it
    breaks the build, since Apache modules refer to symbols that are only
    in httpd, not in any linked library.

 *) Transform -pthread or -pthreads in the Kerberos compiler flags into
    something that apxs can handle.  This is needed for some builds of
    Heimdal.

 *) Added another fix for finding et/com_err.h on Red Hat, this time for
    mod_webauthldap.

 *) Search for apxs2 in the path before apxs.  WebAuth requires Apache
    2.x, so if apxs2 is available, it's more likely the right thing to use
    than apxs.  This change allows the WebAuth build to find apxs properly
    on Debian without extra configure flags.

 *) Documented the Kerberos ticket encoding for WebAuth tokens in the
    protocol specification.

 *) Some coding style cleanup in the Kerberos v5 parts of libwebauth.

WebAuth 3.4.1 (2006-02-06)

 *) Reverted the change in 3.4.0 to not strip WebAuth data from the URLs
    for unprotected URLs, since URLs with protection applied via .htaccess
    files aren't detected early enough in request processing to be
    recognized in the translation hook and look like they're unprotected.

 *) Documented the WebAuthStripURL directive as a partial replacement for
    the problem the reverted change was supposed to solve.  This directive
    has always been supported but it was previously undocumented and not
    guaranteed to remain.
