@@ -20,7 +20,7 @@ Description: Apache 2 modules for WebAuth authentication
  used for authorization control and to populate environment variables.
  These modules should be installed on any web server using WebAuth.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: libapache2-webkdc
 Architecture: any
@@ -36,7 +36,7 @@ Description: Apache 2 modules for a WebAuth authentication KDC
  servers that use WebAuth will talk to this server to obtain and verify
  authentication credentials.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: libwebauth-perl
 Section: perl
@@ -52,7 +52,7 @@ Description: Perl library for WebAuth authentication
  does token encoding and decoding and other lower-level parts of the
  WebAuth protocol.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: libwebauth1
 Section: libs
@@ -68,7 +68,7 @@ Description: Shared libraries for WebAuth authentication
  Perl bindings, and command-line utilities.  It does token encoding and
  decoding and other lower-level parts of the WebAuth protocol.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: libwebauth1-dev
 Section: libdevel
@@ -84,7 +84,7 @@ Description: Development files for WebAuth authentication
  This package contains the symlinks, headers, and static library needed to
  compile and link programs that use libwebauth.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: libwebkdc-perl
 Section: perl
@@ -100,7 +100,7 @@ Description: Perl library for WebAuth authentication
  which handles user authentication and the establishment of initial
  authentication credentials.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: webauth-tests
 Architecture: all
@@ -114,7 +114,7 @@ Description: Tests for the WebAuth authentication modules
  This package contains test HTML files and Apache 2 configuration
  fragments to test a new installation of the WebAuth modules.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: webauth-utils
 Architecture: any
@@ -128,7 +128,7 @@ Description: Command-line utilities for WebAuth authentication
  This package contains an additional command-line tool to manipulate
  WebAuth keyrings.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
 
 Package: webauth-weblogin
 Architecture: all
@@ -144,4 +144,4 @@ Description: Central login server for WebAuth authentication
  servers.  Only one weblogin server is needed to support a site WebAuth
  installation.  It is normally run on the same system as the WebKDC.
  .
-  Homepage: http://webauthv3.stanford.edu/
+  Homepage: http://webauth.stanford.edu/
