@@ -2,7 +2,7 @@ Packaged for Debian by Russ Allbery <rra@debian.org>            2004-06-23
 
 It was downloaded from:
 
-    <http://webauthv3.stanford.edu/>
+    <http://webauth.stanford.edu/>
 
 Upstream authors:
 
