@@ -19,7 +19,7 @@ read them as intended.
 
 See:
 
-    <http://webauthv3.stanford.edu/>
+    <http://webauth.stanford.edu/>
 
 for more information about WebAuth, including copies of the module manuals
 and places to contact to get help with the installation.
@@ -129,4 +129,4 @@ configured a privgroup attribute, you may now use the "require privgroup"
 command to restrict access to particular web pages to members of that
 privgroup.
 
- -- Russ Allbery <rra@debian.org>, Wed Nov 16 16:40:34 2005
+ -- Russ Allbery <rra@debian.org>, Thu Mar 16 13:33:46 2006
